test/files/neg/t10938.check
t10938.scala:4: error: object xxx is not a member of package scala
  def f(): scala.xxx.XXX[_, _] = ???
                 ^
1 error
